Assignment 17/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_s_Country__c</fullName>
        <formula>Country_Name__r.Name&amp;&quot;-&gt;&quot;&amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State&apos;s Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Districts__c</fullName>
        <label>Total Number of Districts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>